updates to the java module