@@ -1,16 +1,25 @@
 package com.nitin.monitor;
 
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.nitin.monitor.dto.CheckResult;
+import com.nitin.monitor.dto.Monitor;
+import com.nitin.monitor.repo.CheckResultRepository;
+import com.nitin.monitor.repo.MonitorRepository;
 import io.javalin.Javalin;
+import io.javalin.config.RoutesConfig;
 import io.javalin.http.BadRequestResponse;
 import io.javalin.http.NotFoundResponse;
+import io.javalin.json.JavalinJackson;
 import java.sql.Connection;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
 public class Main {
-    public static void main(String[] args) {
+    static void main(String[] ignoredArgs) {
         int port = Integer.parseInt(System.getenv().getOrDefault("PORT", "8080"));
         int maxConcurrent = Integer.parseInt(System.getenv().getOrDefault("MAX_CONCURRENT_CHECKS", "10"));
 
@@ -25,23 +34,48 @@ public class Main {
         MonitorRepository monitorRepo = new MonitorRepository(conn);
         CheckResultRepository checkResultRepo = new CheckResultRepository(conn);
         Scheduler scheduler = new Scheduler(maxConcurrent, monitorRepo, checkResultRepo);
-        ObjectMapper mapper = new ObjectMapper();
+        ObjectMapper mapper = buildObjectMapper();
 
         // Re-register any monitors already in the DB (server restart case)
         for (Monitor m : monitorRepo.findAll()) {
             scheduler.register(m);
         }
 
-        Javalin app = Javalin.create().start(port);
+        Javalin app =
+                Javalin.create(config -> {
+                    config.jsonMapper(new JavalinJackson(mapper, false));
+                    registerRoutes(config.routes, mapper, monitorRepo, checkResultRepo, scheduler);
+                }).start(port);
 
-        app.get("/", ctx -> ctx.result("Hello, world!"));
+        Runtime.getRuntime().addShutdownHook(new Thread(() -> {
+            scheduler.shutdown(10); // 10s grace period for in-flight checks
+            app.stop();
+            try {
+                conn.close();
+            } catch (Exception ignored) {
+            }
+        }));
+    }
 
-        app.get("/api/v1/healthz", ctx -> ctx.json(Map.of("status", "ok")));
+    private static ObjectMapper buildObjectMapper() {
+        ObjectMapper mapper = new ObjectMapper();
+        mapper.registerModule(new JavaTimeModule());
+        mapper.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
+        return mapper;
+    }
 
-        app.post("/api/v1/monitors", ctx -> {
-            //parse body with Jackson, validate, return 400 on bad input
+    private static void registerRoutes(
+            RoutesConfig routes,
+            ObjectMapper mapper,
+            MonitorRepository monitorRepo,
+            CheckResultRepository checkResultRepo,
+            Scheduler scheduler) {
+        routes.get("/", ctx -> ctx.result("Hello, world!"));
 
-            Map<String, Object> body = mapper.readValue(ctx.body(), Map.class);
+        routes.get("/api/v1/healthz", ctx -> ctx.json(Map.of("status", "ok")));
+
+        routes.post("/api/v1/monitors", ctx -> {
+            Map<String, Object> body = mapper.readValue(ctx.body(), new TypeReference<>() {});
             String name = (String) body.get("name");
             String url = (String) body.get("url");
             int interval = ((Number) body.get("interval_seconds")).intValue();
@@ -60,38 +94,29 @@ public class Main {
             ctx.status(201).json(m);
         });
 
-        app.get("/api/v1/monitors", ctx -> ctx.json(monitorRepo.findAll()));
+        routes.get("/api/v1/monitors", ctx -> ctx.json(monitorRepo.findAll()));
 
-        app.get("/api/v1/monitors/{id}", ctx -> {
+        routes.get("/api/v1/monitors/{id}", ctx -> {
             Monitor m = monitorRepo.findById(ctx.pathParam("id"))
                     .orElseThrow(() -> new NotFoundResponse("not found"));
             ctx.json(m);
         });
 
-        app.get("/api/v1/monitors/{id}/status", ctx -> {
+        routes.get("/api/v1/monitors/{id}/status", ctx -> {
             String id = ctx.pathParam("id");
             Monitor m = monitorRepo.findById(id).orElseThrow(() -> new NotFoundResponse("not found"));
             int limit = Optional.ofNullable(ctx.queryParam("limit"))
                     .map(Integer::parseInt).orElse(20);
-            limit = Math.min(Math.max(limit, 1), 100); // clamp per spec: default 20, max 100
+            limit = Math.clamp(limit, 1, 100);
             List<CheckResult> history = checkResultRepo.recentForMonitor(id, limit);
             ctx.json(Map.of("monitor", m, "history", history));
         });
 
-        app.delete("/api/v1/monitors/{id}", ctx -> {
+        routes.delete("/api/v1/monitors/{id}", ctx -> {
             String id = ctx.pathParam("id");
             scheduler.unregister(id);
             monitorRepo.delete(id); // cascades check_results via FK
             ctx.status(204);
         });
-
-        Runtime.getRuntime().addShutdownHook(new Thread(() -> {
-            scheduler.shutdown(10); // 10s grace period for in-flight checks
-            app.stop();
-            try {
-                conn.close();
-            } catch (Exception ignored) {
-            }
-        }));
     }
 }
